testsuite/poke.pkl/funcall-vararg-diag-2.pk
/* { dg-do compile } */

/* XXX The wrong diagnostic is emitted here.  */

defun foo = (args..., int a) int:
  {
   return args[0];   /* { dg-error ".*\n.*" } */
  }
